--- a/movie.html
+++ b/movie.html
@@ -20,7 +20,8 @@
                 FAQ</a>
             <a href="#"><i class="fa-solid fa-heart"></i>
                 Favorite</a>
-            <a href="#">Explore</a>
+            <a href="#"><i class="fa-solid fa-video"></i>
+                Explore</a>
             <a href="#">Contact</a>
         </nav>
         <div class="main-bottom">
