--- a/movie1.html
+++ b/movie1.html
@@ -18,7 +18,8 @@
                 FAQ</a>
             <a href="#"><i class="fa-solid fa-heart"></i>
                 Favorite</a>
-            <a href="#">Explore</a>
+            <a href="#"><i class="fa-solid fa-video"></i>
+                Explore</a>
             <a href="#">Contact</a>
         </nav>
         <div class="main-bottom">
@@ -103,6 +104,20 @@
             <a href="" class="movie-card">
                 <img src="https://i.pinimg.com/1200x/a7/1e/b2/a71eb2073c4566b78ec30da601a616cb.jpg" alt="">
                 <h4>The Godfather4</h4>
+            </a>
+            <a href="" class="movie-card">
+                <img src="https://i.pinimg.com/1200x/2b/db/f4/2bdbf4630e18046e08f10ec5231f3f93.jpg" alt="">
+                <h4>Breaking bad</h4>
+            </a>
+
+            <a class="movie-card">
+                <img src="https://i.pinimg.com/736x/ed/de/d1/edded1713a7ed6d0217097601058d064.jpg" alt="">
+                <h4>Robin Hood</h4>
+            </a>
+
+            <a href="" class="movie-card">
+                <img src="https://i.pinimg.com/736x/7d/fd/dd/7dfddd911b8040729896c5be83f8e139.jpg" alt="">
+                <h4>Inception</h4>
             </a>
     </div>
 </body>
