--- a/WatchTrailer.html
+++ b/WatchTrailer.html
@@ -3,37 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Website</title>
-    <link rel="stylesheet" href="movie.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="WatchTrailer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
-
 <body>
-
-    <!-- NAVBAR -->
     <header class="navbar">
-        <div class="logo">Dream Movie</div>
+        <div class="logo">Dream movie</div>
         <nav>
-            <a href="#"><i class="fa-solid fa-house"></i>
+            <a href="index.html"><i class="fa-solid fa-house"></i>
                 Home</a>
-            <a href="#"><i class="fa-solid fa-message"></i>
+            <a href="FAQ.html">
+                <i class="fa-solid fa-message"></i>
                 FAQ</a>
-            <a href="#"><i class="fa-solid fa-heart"></i>
+            <a href="Favorite.html"><i class="fa-solid fa-heart"></i>
                 Favorite</a>
-            <a href="#"><i class="fa-solid fa-video"></i>
+            <a href="Explore.html"><i class="fa-solid fa-video"></i>
                 Explore</a>
-            <a href="#">Contact</a>
         </nav>
         <div class="main-bottom">
             <div class="top-bar">
                 <input type="text" placeholder="Search" class="search-input" >
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-        <button class="btn-login">login</button>
+        <!-- <button class="btn">login</button> -->
         </div>
     </header>
 
-    <!-- HERO SECTION -->
     <section class="hero">
         <div class="hero-left">
             <img src="https://i.pinimg.com/736x/0a/37/c1/0a37c14622e169a3eb0b4c1fdb13dee6.jpg" alt="movie poster">
@@ -65,14 +61,11 @@
             </div>
         </div>
     </section>
+    
+    <main>
+    <div class="movie-grid">
 
-    <!-- MOVIE GRID -->
-    <section class="movie-section">
-        <h2>Now Showing</h2>
-
-        <div class="movie-grid">
-
-            <a href="movie1.html" class="movie-card">
+            <a href="movie1.html" class="movie-card" >
                 <img src="https://i.pinimg.com/736x/28/9d/14/289d1431bdf0a87b7ac5b4f5810b6079.jpg" alt="">
                 <h4>The Karate Kid</h4>
             </a>
@@ -101,12 +94,6 @@
                 <img src="https://i.pinimg.com/1200x/e7/48/b6/e748b643badb4717ce538e617a8ea1dd.jpg" alt="">
                 <h4>Spider-man far from home</h4>
             </a>
-
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/736x/c4/eb/ba/c4ebba51f9884760922dcfd095bada40.jpg" alt="">
-                <h4>The MaZe Runner</h4>
-            </a>
-
             <a href="" class="movie-card">
                 <img src="https://i.pinimg.com/1200x/6a/44/bd/6a44bd064fee84aff0396207b0a01c2c.jpg" alt="">
                 <h4>Enol Holmes2</h4>
@@ -131,17 +118,6 @@
                 <img src="https://i.pinimg.com/1200x/a7/1e/b2/a71eb2073c4566b78ec30da601a616cb.jpg" alt="">
                 <h4>The Godfather4</h4>
             </a>
-
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/736x/d9/1e/67/d91e6782877172651fbc8b2f29e2bef0.jpg" alt="">
-                <h4>Peaky Blinders</h4>
-            </a>
-
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/736x/0d/6b/61/0d6b6153188287cae4bb5d682ff8ab44.jpg" alt="">
-                <h4>Jonwick 3</h4>
-            </a>
-
             <a href="" class="movie-card">
                 <img src="https://i.pinimg.com/1200x/2b/db/f4/2bdbf4630e18046e08f10ec5231f3f93.jpg" alt="">
                 <h4>Breaking bad</h4>
@@ -156,81 +132,10 @@
                 <img src="https://i.pinimg.com/736x/7d/fd/dd/7dfddd911b8040729896c5be83f8e139.jpg" alt="">
                 <h4>Inception</h4>
             </a>
+    </div>
 
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/1200x/48/99/c2/4899c2bb11bc48bfdacad957986c351a.jpg" alt="">
-                <h4>Holidate</h4>
-            </a>
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/1200x/31/12/1d/31121d2058a5aa4da918d4eca3aec39f.jpg" alt="">
-                <h4>Explore is her Middle Name</h4>
-            </a>
-
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/736x/50/62/19/5062195424b97d4776eda72457ee59bd.jpg" alt="">
-                <h4>AVARTAR</h4>
-            </a>
-
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/1200x/42/00/da/4200dae9ac7b15a5c65375cbfaceaa69.jpg" alt="">
-                <h4>Avengers</h4>
-            </a>
-
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/1200x/e7/48/b6/e748b643badb4717ce538e617a8ea1dd.jpg" alt="">
-                <h4>Spider-man far from home</h4>
-            </a>
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/736x/0d/6b/61/0d6b6153188287cae4bb5d682ff8ab44.jpg" alt="">
-                <h4>Jonwick 3</h4>
-            </a>
-
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/1200x/2b/db/f4/2bdbf4630e18046e08f10ec5231f3f93.jpg" alt="">
-                <h4>Breaking bad</h4>
-            </a>
-
-            <a class="movie-card">
-                <img src="https://i.pinimg.com/736x/ed/de/d1/edded1713a7ed6d0217097601058d064.jpg" alt="">
-                <h4>Robin Hood</h4>
-            </a>
-
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/736x/7d/fd/dd/7dfddd911b8040729896c5be83f8e139.jpg" alt="">
-                <h4>Inception</h4>
-            </a>
-            
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/1200x/e7/48/b6/e748b643badb4717ce538e617a8ea1dd.jpg" alt="">
-                <h4>Spider-man far from home</h4>
-            </a>
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/736x/0d/6b/61/0d6b6153188287cae4bb5d682ff8ab44.jpg" alt="">
-                <h4>Jonwick 3</h4>
-            </a>
-
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/1200x/2b/db/f4/2bdbf4630e18046e08f10ec5231f3f93.jpg" alt="">
-                <h4>Breaking bad</h4>
-            </a>
-
-            <a class="movie-card">
-                <img src="https://i.pinimg.com/736x/ed/de/d1/edded1713a7ed6d0217097601058d064.jpg" alt="">
-                <h4>Robin Hood</h4>
-            </a>
-
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/736x/7d/fd/dd/7dfddd911b8040729896c5be83f8e139.jpg" alt="">
-                <h4>Inception</h4>
-            </a>
-            <a href="" class="movie-card">
-                <img src="https://i.pinimg.com/736x/7d/fd/dd/7dfddd911b8040729896c5be83f8e139.jpg" alt="">
-                <h4>Inception</h4>
-            </a>
-        </div>
-
-        <button class="btn show-more">Show More</button>
-    </section>
-
+    <footer class="footer">
+    © 2025 Dream Movie | All Rights Reserved
+    </footer>
 </body>
 </html>
