--- a/movie1.html
+++ b/movie1.html
@@ -11,28 +11,28 @@
     <header class="navbar">
         <div class="logo">Dream movie</div>
         <nav>
-            <a href=""><i class="fa-solid fa-house"></i>
+            <a href="movie.html"><i class="fa-solid fa-house"></i>
                 Home</a>
-            <a href="#">
+            <a href="FAQ.html">
                 <i class="fa-solid fa-message"></i>
                 FAQ</a>
-            <a href="#"><i class="fa-solid fa-heart"></i>
+            <a href="Favorite.html"><i class="fa-solid fa-heart"></i>
                 Favorite</a>
-            <a href="#"><i class="fa-solid fa-video"></i>
+            <a href="Explore.html"><i class="fa-solid fa-video"></i>
                 Explore</a>
-            <a href="#">Contact</a>
         </nav>
         <div class="main-bottom">
             <div class="top-bar">
                 <input type="text" placeholder="Search" class="search-input" >
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-        <button class="btn">login</button>
+        <!-- <button class="btn">login</button> -->
         </div>
     </header>
+    <section>
     <div >
-        <a class="btn-sidebar" href="">Home</a>
-        <a class="btn-sidebar" href="">Movie</a>
+        <a class="btn-sidebar" href="movie.html">Home   //</a>
+        <a class="btn-sidebar" href="">Movie   //</a>
     </div>
 
     <div class="content">
@@ -50,6 +50,7 @@
             <h4>3</h4>
         </a>
     </div>
+    <main>
     <div class="movie-grid">
 
             <a href="moviepage1.html" class="movie-card" >
@@ -120,5 +121,10 @@
                 <h4>Inception</h4>
             </a>
     </div>
+    </section>
+
+    <footer class="footer">
+    © 2025 Dream Movie | All Rights Reserved
+    </footer>
 </body>
 </html>
